chore: vector db search 후 예외 처리 추가 #3